add params and fix swagger
